video alignment issue fixed

--- a/src/sass/_custom.scss
+++ b/src/sass/_custom.scss
@@ -335,6 +335,7 @@ button:focus-visible {
 
 video {
   clip-path: inset(1px 1px);
+  object-fit: cover;
 }
 
 .popover {
